# vcpkg

.github/: pull_request_template.md
ci/: filter-progress.pl  format-for-azure-pipelines.sed  msys2bash.cmd  pipeline.yml  portfile.cmake  select-packages.yml  vcpkg-install.yml  vcpkg.json
ports/7zip/: CMakeLists.txt  portfile.cmake  vcpkg.json
ports/arrayfire/: portfile.cmake  wip.diff
ports/bzip2/: portfile.cmake  usage  vcpkg-cmake-wrapper.cmake  vcpkg.json
ports/cfitsio/: 0001-fix-dependencies-and-export-cmake-targets.patch  portfile.cmake  vcpkg.json
ports/cld3/: fix-build.patch  unofficial-export.patch
ports/coinutils/: portfile.cmake  vcpkg.json  wip.patch
ports/curl/: 0020-fix-pc-file.patch  dependencies.patch  portfile.cmake  vcpkg.json
ports/ecm/: portfile.cmake
ports/fltk/: vcpkg.json
ports/fontconfig/: vcpkg-cmake-wrapper.cmake.in
ports/freerdp/: libusb-pkgconfig.patch  portfile.cmake
ports/freetype/: vcpkg-cmake-wrapper.cmake
ports/gdal/: 0007-Fix-absl-string_view.patch  databases.patch  portfile.cmake  vcpkg.json
ports/gettext/: install-autopoint.cmake  portfile.cmake  vcpkg.json
ports/gmp/: portfile.cmake
ports/gobject-introspection/: 0001-g-ir-tool-template.in.patch  0002-cross-build.patch  0003-fix-paths.patch  portfile.cmake  vcpkg-port-config.cmake  vcpkg.json
ports/harfbuzz/: portfile.cmake  vcpkg.json
ports/hdf5/: mingw-import-libs.patch  (+1 more)
scripts/: bootstrap.sh  ci.baseline.txt  ports.cmake
scripts/test_ports/vcpkg-ci-gobject-introspection/project/: CMakeLists.txt  main.c
versions/: baseline.json
(+142 files in other folders)
